Fixed About Me nav jump

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -120,7 +120,7 @@ span {
   padding: 5px;
 }
 #anchor_My_Name_Header {
-  visibility: hidden;
+  /* visibility: hidden; */
 }
 #Anchor-Reference {
   color: rgb(178, 191, 116);
